refactor: 更新包名以统一为com.ksptool.bio.commons

--- a/src/main/java/com/ksptool/bio/biz/模块划分指导说明书(基于包).md
+++ b/src/main/java/com/ksptool/bio/biz/模块划分指导说明书(基于包).md
@@ -5,7 +5,7 @@
 ## 1. 核心模块 (core)
 
 - **职责**: 负责提供系统运行所必需的核心基础功能。
-- **包路径**: `com.ksptooi.biz.core`
+- **包路径**: `com.ksptool.bio.biz.core`
 - **数据库表前缀**: `core_`
 - **包含内容**:
     - 用户认证与授权 (用户、角色、权限)
