--- a/src/main/java/com/ksptool/bio/biz/模块划分指导说明书(基于包).md
+++ b/src/main/java/com/ksptool/bio/biz/模块划分指导说明书(基于包).md
@@ -15,7 +15,7 @@
 ## 2. 中继服务 (relay)
 
 - **职责**: 负责处理所有与 API 中继、流量转发和路由相关的功能。
-- **包路径**: `com.ksptooi.biz.relay`
+- **包路径**: `com.ksptool.bio.biz.relay`
 - **数据库表前缀**: `relay_`
 - **包含内容**:
     - 中继服务器的定义与管理
@@ -25,7 +25,7 @@
 ## 3. 请求调试 (requestdebug)
 
 - **职责**: 负责提供面向开发人员的 API 请求调试、保存和管理功能。
-- **包路径**: `com.ksptooi.biz.rdbg`
+- **包路径**: `com.ksptool.bio.biz.rdbg`
 - **数据库表前缀**: `rdbg_`
 - **包含内容**:
     - 用户保存的 HTTP 请求的管理 (包括请求分组、排序等)
@@ -35,7 +35,7 @@
 ## 4. 请求文档模块 (document)
 
 - **职责**: 负责提供面向开发人员的请求文档。
-- **包路径**: `com.ksptooi.biz.document`
+- **包路径**: `com.ksptool.bio.biz.document`
 - **数据库表前缀**: `ep_`
 - **包含内容**:
     - 请求文档相关组件
